versioned_docs/version-1.20.x/wiki/mods/extra-disks.mdx
---
description: Extra Disks adds bigger disks to Refined Storage 1.14+
---

# Extra Disks

import ProjectHeader from '@site/src/components/ProjectHeader';

<ProjectHeader slug="extra-disks" mcVersion="1.20" />

The contents of the mod can be divided into three main
categories: [Crafting Ingredients](#crafting-ingredients), [Block Storage](#block-storage),
and [Disk Storage](#disk-storage).

---

## Disk Storage
The primary storage solution, and the best known, is the disk. It functions similarly to Refined Storage but with larger
storage capacities.

## Block Storage
The secondary storage solution. It can be used like a regular block and doesn't require a drive. It is similar to
Refined Storage but with larger storage capacities. As in Refined Storage, you can adjust the power consumption in the
mod's server configuration within the world directory.

## Crafting Ingredients
There are a few additional crafting ingredients because, with great power, comes great responsibility.

## Storage Sizes

<div class="two-columns-base">
    <div class="two-columns-left">

    ### Item Storage

    |   Tier   | Storable Items |
    |:--------:|:--------------:|
    |   256k   |    256,000     |
    |  1024k   |   1,024,000    |
    |  4096k   |   4,096,000    |
    |  16384k  |  16,384,000    |
    |  65536k  |  65,536,000    |
    |   262m   | 262,144,000    |
    |  1048m   |1,048,576,000   |
    | Infinite |   Unlimited*   |

    </div>
    <div class="two-columns-right">

    ### Fluid Storage

    |   Tier   | Storable Fluid (in mB) |
    |:--------:|:----------------------:|
    |  16384k  |    16,384,000          |
    |  65536k  |    65,536,000          |
    |   262m   |   262,144,000          |
    |  1048m   | 1,048,576,000          |
    | Infinite |    Unlimited*          |
  </div>
</div>

<p>**Unlimited means that each item/fluid type can store up to 2,147,483,647*</p>

## Advancements
You will receive an advancement for crafting the highest-capacity item or fluid storage disk/block.
